# zllm-probe

./: Cargo.toml  LICENSE  README.md
crates/probe-core/: Cargo.toml
crates/probe-core/src/: lib.rs
docs/: INSTRUMENTATION_PROTOCOL.md  PLUGIN_PLAN.md  TESTING_MATRIX.md
proxy/: Cargo.toml
proxy/src/: main.rs
proxy/tests/: proxy_behavior.rs
tests/: matrix.sh
