[package]
name = "probe-proxy"
description = "OpenAI-compatible middleware adding hallucination/uncertainty reports to ANY LLM server (llama.cpp llama-server, vLLM, zllm, ...) via the logprobs field"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "probe-proxy"
path = "src/main.rs"

[dependencies]
probe-core = { path = "../crates/probe-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
